<resources>
    <string name="app_name">TimeTracker</string>
    <string name="project">Project</string>
    <string name="reports">Reports</string>
    <string name="projectsFragment">Projects</string>
    <string name="reportsFragment">Reports</string>
    <string name="exitMessage">Are you sure you want to exit? All activities will be stopped.</string>
    <string name="exitButton">EXIT</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="emptyError">Cannot be empty</string>
    <string name="project_name_hint">Project name</string>
    <string name="project_description_hint">Project description</string>
    <string name="employee_client_hint">Employee/Client</string>
    <string name="billable">Billable</string>
    <string name="report_name_hint">Report name</string>
    <string name="default_start_date">12/15/2017</string>
    <string name="default_start_time">6:49 pm</string>
    <string name="default_end_date">12/15/2017</string>
    <string name="default_end_time">6:49 pm</string>
    <string name="report_format">Report format</string>
    <string name="text_format">Text</string>
    <string name="web_format">Web</string>
    <string name="task_name_hint">Task name</string>
    <string name="task_description_hint">Task description</string>
    <string name="time_format_hint">hh:mm</string>
    <string name="options">Options</string>
    <string name="programmed">Programmed</string>
    <string name="limited_time">Limited duration</string>
    <string name="task_started">Started</string>
    <string name="default_start_long_date">December 7, 2017</string>
    <string name="ended">Ended</string>
    <string name="default_end_long_date">December 8, 2017</string>
    <string name="duration">Duration</string>
    <string name="default_duration">7h 30m 20s</string>
    <string name="intervals">Intervals</string>
    <string name="new_task">New task</string>
    <string name="new_project">New Project</string>
    <string name="new_report">New Report</string>
    <string name="main">MAIN</string>
    <string name="time_0">0h 0m 0s</string>
    <string name="date_time_default">December 7, 2017 11:00 am</string>
    <string name="save">SAVE</string>
    <string name="pause_all">Pause all</string>
    <string name="delete_all">Delete all</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_type">Sort by type</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="pause">PAUSE</string>
    <string name="start">START</string>
    <string name="am">am</string>
    <string name="pm">pm</string>
    <string name="h">h</string>
    <string name="at">" at "</string>
    <string name="to">TO: </string>
    <string name="from">FROM: </string>
    <string name="english">ENGLISH</string>
    <string name="catalan">CATALAN</string>
    <string name="spanish">SPANISH</string>
    <string name="start_all">Resume all</string>
    <string name="language">LANGUAGE</string>
    <string name="minimum_clock_time">MINIMUM CLOCK TIME</string>
    <string name="there_are_no_items_yet">There are no activities yet</string>
    <string name="there_are_no_reports_yet">There are no reports yet</string>
    <string name="brief">Brief</string>
    <string name="detailed">Detailed</string>
    <string name="_1s">1 second</string>
    <string name="_5s">5 seconds</string>
    <string name="_1min">1 minute</string>
    <string name="_5min">5 minutes</string>
    <string name="_1h">1 hour</string>
</resources>
